# legacy_widgets_for_gtk

./: .gitignore  CMakeLists.txt  Makefile  README.md  lwgled.c  lwgled.h  mysession.vim  widget_demo.c
_gtkmm/: CMakeLists.txt  LWGExampleWindow.h  legacy-widgets-for-gtk.h  lwg_led_cpp.cpp
_gtkmm/debian/: README.Debian  README.source  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex
cmake/: FindGirScanner.cmake
debian/: changelog  control  gir1.2-lwg-1.0.install  liblegacy-widgets-for-gtk-c-dev.install  liblegacy-widgets-for-gtk-dev.install  rules
gtkmm/: CMakeLists.txt  LWGExampleWindow.cpp  LWGExampleWindow.h  lwg_led_cpp.cpp  lwg_led_cpp.h  lwgled.cpp  lwgled.h  main.cpp
gtkmm/debian/: README  changelog  control  copyright  legacy-widgets-for-gtk.cron.d.ex  legacy-widgets-for-gtk.default.ex  legacy-widgets-for-gtk.doc-base.EX  manpage.1.ex  manpage.sgml.ex  prerm.ex  rules  shlibs.local.ex
include/: legacy_widgets_for_gtk.h  lwgled.h  lwgrgbled.h
src/: CMakeLists.txt  legacy_widgets_for_gtk.pc.in  lwgled.c  lwgledprivate.h  lwgrgbled.c  lwgrgbledprivate.h  widget_demo.c
